--- a/Feb/25-02-18.md
+++ b/Feb/25-02-18.md
@@ -2,10 +2,89 @@
 - 쿠키, 세션, 웹소켓
 ***
 # 🧑🏻‍💻 학습한 내용 🧑🏻‍💻
+# WebSocket
 
+> WebSocket : 클라이언트와 서버의 실시간 통신을 제공하는 프로토콜
+> 
+
+---
+
+웹소켓은 클라이언트와 서버 간 실시간 양방향 통신을 제공하는 프로토콜입니다.
+
+기존의 **HTTP 통신에서는 요청/응답 방식**으로 데이터를 주고 받았다면
+**웹소켓은 양방향에서 누구든 자유롭게 데이터를 주고 받을 수** 있다는 특징이 있습니다.
+
+실시간성의 특성에 기반하여 다음과 같은 사용사례가 있습니다.
+
+- **메신저 (카카오톡, 디스코드..)**
+- **주식, 환율의 실시간 반영**
+- **멀티플레이 온라인 게임**
+- **실시간 알림 시스템**
+
+# ws와 wss의 차이점
+
+> ws : 일반적인 연결에서 사용되는 프로토콜
+> 
+
+> wss : 보안 연결에서 사용되는 프로토콜
+> 
+
+---
+
+웹소켓 연결시 아래와 같은 요청을 보냅니다.
+
+```jsx
+비암호화 웹소켓 : ws://example.com:8000
+암호화 웹소켓 연결 : wss://example.com:8000
+```
+
+비슷해 보입니다만 어떤 차이점이 있을까요?
+
+`ws`는 일반적인 비암호화 웹소켓 연결 요청시 사용됩니다.
+
+이는 HTTP와 같이 평문으로 데이터를 주고받게 되므로 네트워크 패킷이 가로채지면 내용이 그대로 노출되는 위험이 있습니다.
+
+이러한 보안적 강화를 위해 `wss`가 사용됩니다.
+
+wss는 암호화 웹소켓 연결시 사용됩니다. 이는 ws에 TLS/SSL을 적용하여 보안을 더했습니다.
+
+이를통해 데이터가 암호화되어 전송되므로 MITM과 같은 공격을 방지할 수 있습니다.
+
+# 메시지 프레임과 경계
+
+---
+
+웹소켓의 전송 데이터 단위는 프레임 입니다.
+
+웹소켓의 경우 **TCP를 기반**으로 만들어진 프로토콜입니다. 
+
+TCP 기반이기 때문에 메시지의 경계를 유지하며 데이터의 순서를 유지할 수 있는데요.
+
+TCP를 떠올려보면 데이터를 일정 크기로 나누고 슬라이딩 윈도우 방식으로 전송했던것을 떠올릴 수 있습니다.
+
+웹소켓도 이를 기반으로 **데이터를 프레임단위로 쪼개고** **경계를 유지**하며 데이터를 송수신 할 수 있도록 설계되었습니다.
+
+# Close 프레임의 역할
+
+---
+
+TCP에서 연결을 종료하기 위해 4way handashake 방식을 사용했다면 웹소켓에서는 Close 프레임을 이용해서 연결을 종료하게 됩니다.
+
+실제로 웹 소켓 연결 전 TCP 연결을 맺고 연결이 종료된 후 TCP 연결이 종료됩니다.
+
+연결을 종료하기 위한 과정은 다음과 같습니다.
+
+1️⃣ **서버에서 WebSocket 연결 종료 요청** (**Close 프레임 전송**)
+
+- 서버가 클라이언트에게 **Close 프레임을 보냄**.
+
+2️⃣ **클라이언트가 Close 프레임으로 응답** (서버의 Close 프레임을 그대로 반환)
+
+- 클라이언트는 서버가 보낸 Close 프레임을 보고 **같은 Close 프레임을 다시 전송**.
+- 서버는 이를 받고, **정상적으로 연결을 종료**.
 # 회고
 # 💪 K (Keep) 💪
-- 딥다이브 너무 재밌다. 내가 모르는걸 알아가는 과정의 즐거움을 잊지말자.
+- 잘하고있다... 아마도.. 잠을 좀 줄이자..
   
 # 😫 P (Problem) 😫
 - 
